--- a/style.css
+++ b/style.css
@@ -71,8 +71,8 @@ div#modal-imagens::-webkit-scrollbar-thumb:hover {
 }
 
 .footer {
-  background-color: #ffffff;
-  color: #5c272f;
+  background-color: #ffffff !important;
+  color: #5c272f !important;
   text-align: left;
   border-top: solid 5px #ec4899;
 }
