--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ div#modal-imagens::-webkit-scrollbar-thumb:hover {
   margin-top: 30px;
   color: #000000;
   padding: 20px;
-  background-color: #e5e7eb;
+  background-color: #e5e7eb !important;
 }
 
 .social-icons a {
